--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div id="main">
+        <img src="IMG_20250711_225048_881.jpg" alt="profilowe.jpg">
         <h1>D4GNK</h1>
         <h3>Small techtoker</h3>
         <br>
-        <p id="link">Tiktok</p>
-        <p id="link">Instagram</p>
+        <div id="link">Tiktok</div>
+        <div id="link">Instagram</div>
     </div>
     
 </body>
