--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <h1>D4GNK</h1>
         <h3>Small techtoker</h3>
         <br>
-        <div id="link">Tiktok</div>
-        <div id="link">Instagram</div>
+        <a href="https://tiktok.com"><div id="link">Tiktok</div></a>
+        <a href="https://instagram.com"><div id="link">Instagram</div></a>
+        <a href="https://youtube.com"><div id="link">Youtube</div></a>
     </div>
     
 </body>
