--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>D4GNK</h1>
         <h3>Small techtoker</h3>
         <br>
-        <a href="https://tiktok.com"><div id="link">Tiktok</div></a>
-        <a href="https://instagram.com"><div id="link">Instagram</div></a>
-        <a href="https://youtube.com"><div id="link">Youtube</div></a>
+        <a href="https://www.tiktok.com/@d4gnk"><div id="link">Tiktok</div></a>
+        <a href="https://www.instagram.com/d4gnk.real/"><div id="link">Instagram</div></a>
+        <a href="https://www.youtube.com/@d4gnk"><div id="link">Youtube</div></a>
     </div>
     
 </body>
