add icons & fix sizing

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="https://kit.fontawesome.com/a15d827fc5.js" crossorigin="anonymous"></script>
     <div id="main">
         <img src="IMG_20250711_225048_881.jpg" alt="profilowe.jpg">
         <h1>D4GNK</h1>
         <h3>Small techtoker</h3>
         <br>
-        <a href="https://www.tiktok.com/@d4gnk"><div id="link">Tiktok</div></a>
-        <a href="https://www.instagram.com/d4gnk.real/"><div id="link">Instagram</div></a>
-        <a href="https://www.youtube.com/@d4gnk"><div id="link">Youtube</div></a>
+        <a href="https://www.tiktok.com/@d4gnk"><div id="link"><i class="fa-brands fa-tiktok fa-xl"></i></div></a>
+        <a href="https://www.instagram.com/d4gnk.real/"><div id="link"><i class="fa-brands fa-instagram fa-xl"></i></div></a>
+        <a href="https://www.youtube.com/@d4gnk"><div id="link"><i class="fa-brands fa-youtube fa-xl"></i></div></a>
     </div>
     
 </body>
