--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <a href="https://www.instagram.com/d4gnk.real/"><div id="link"><i class="fa-brands fa-instagram fa-xl"></i></div></a>
         <a href="https://www.youtube.com/@d4gnk"><div id="link"><i class="fa-brands fa-youtube fa-xl"></i></div></a>
     </div>
+
+    <footer>Made by © Dragonek<br>
+    Using <a href="https://fontawesome.com">fontawesome.com</a></footer>
     
 </body>
 </html>
