add favicon + fix footer

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>d4gnk's BIO</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="fav.png">
 </head>
 <body>
+    <div id="mainmain">
     <script src="https://kit.fontawesome.com/a15d827fc5.js" crossorigin="anonymous"></script>
     <div id="main">
         <img src="IMG_20250711_225048_881.jpg" alt="profilowe.jpg">
@@ -20,6 +22,6 @@
 
     <footer>Made by © Dragonek<br>
     Using <a href="https://fontawesome.com">fontawesome.com</a></footer>
-    
+</div>
 </body>
 </html>
