--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1>D4GNK</h1>
         <h3>Small techtoker</h3>
         <br>
-        <a href="https://www.tiktok.com/@d4gnk"><div id="link"><i class="fa-brands fa-tiktok fa-xl"></i></div></a>
-        <a href="https://www.instagram.com/d4gnk.real/"><div id="link"><i class="fa-brands fa-instagram fa-xl"></i></div></a>
-        <a href="https://www.youtube.com/@d4gnk"><div id="link"><i class="fa-brands fa-youtube fa-xl"></i></div></a>
+        <div id="link"><a href="https://www.tiktok.com/@d4gnk"><i class="fa-brands fa-tiktok fa-xl"></i></a></div>
+        <div id="link"><a href="https://www.instagram.com/d4gnk.real/"><i class="fa-brands fa-instagram fa-xl"></i></a></div>
+        <div id="link"><a href="https://www.youtube.com/@d4gnk"><i class="fa-brands fa-youtube fa-xl"></i></a></div>
     </div>
 
     <footer>Made by © Dragonek<br>
