--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="fav.png">
 </head>
-<body>
+<body class="fadeInUp-animation">
     <div id="mainmain">
     <script src="https://kit.fontawesome.com/a15d827fc5.js" crossorigin="anonymous"></script>
     <div id="main">
@@ -15,13 +15,15 @@
         <h1>D4GNK</h1>
         <h3>Small techtoker</h3>
         <br>
-        <div id="link"><a href="https://www.tiktok.com/@d4gnk"><i class="fa-brands fa-tiktok fa-xl"></i></a></div>
-        <div id="link"><a href="https://www.instagram.com/d4gnk.real/"><i class="fa-brands fa-instagram fa-xl"></i></a></div>
-        <div id="link"><a href="https://www.youtube.com/@d4gnk"><i class="fa-brands fa-youtube fa-xl"></i></a></div>
+        <div id="link"><a class ="alink " href="https://www.tiktok.com/@d4gnk"><i class="fa-brands fa-tiktok fa-xl"></i></a></div>
+        <div id="link"><a class ="alink" href="https://www.instagram.com/d4gnk.real/"><i class="fa-brands fa-instagram fa-xl"></i></a></div>
+        <div id="link"><a class ="alink" href="https://www.youtube.com/@d4gnk"><i class="fa-brands fa-youtube fa-xl"></i></a></div>
+        <div id="link"><a class ="alink" href="https://github.com/reald4gnk"><i class="fa-brands fa-github fa-xl"></i></a></div>
+        <div id="link"><a class ="alink" href="https://discord.gg/XWSXbzSYCq"><i class="fa-brands fa-discord fa-xl"></i></a></div>
     </div>
 
     <footer>Made by © Dragonek<br>
-    Using <a href="https://fontawesome.com">fontawesome.com</a></footer>
+    Using <a class="white" href="https://fontawesome.com">fontawesome.com</a></footer>
 </div>
 </body>
 </html>
