small animation fix

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="fav.png">
 </head>
-<body class="fadeInUp-animation">
+<body>
     <div id="mainmain">
     <script src="https://kit.fontawesome.com/a15d827fc5.js" crossorigin="anonymous"></script>
-    <div id="main">
+    <div id="main" class="fadeInUp-animation">
         <img src="IMG_20250711_225048_881.jpg" alt="profilowe.jpg">
         <h1>D4GNK</h1>
         <h3>Small techtoker</h3>
