--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div id="main" class="fadeInUp-animation">
         <img src="IMG_20250711_225048_881.jpg" alt="profilowe.jpg">
         <h1>D4GNK</h1>
-        <h3>Small techtoker</h3>
+        <h3>Small techtoker<br>
+        just practicing HTML & CSS ¯\_(ツ)_/¯</h3>
         <br>
         <div id="link"><a class ="alink " href="https://www.tiktok.com/@d4gnk"><i class="fa-brands fa-tiktok fa-xl"></i></a></div>
         <div id="link"><a class ="alink" href="https://www.instagram.com/d4gnk.real/"><i class="fa-brands fa-instagram fa-xl"></i></a></div>
