button and small fixes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <div id="link"><a class ="alink" href="https://github.com/reald4gnk"><i class="fa-brands fa-github fa-xl"></i></a></div>
         <div id="link"><a class ="alink" href="https://discord.gg/XWSXbzSYCq"><i class="fa-brands fa-discord fa-xl"></i></a></div>
     </div>
-
+<br>
+<br>
+<div class="arrowcircle fadeInUp-animation">
+<div class="circle"><a href="#AboutMe"><i class="fa-solid fa-arrow-down"></i></a></div>
+</div>
     <footer>Made by © Dragonek<br>
     Using <a class="white" href="https://fontawesome.com">fontawesome.com</a></footer>
 </div>
