Added "About Me" (update soon!)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
 <div class="arrowcircle fadeInUp-animation">
 <div class="circle"><a href="#AboutMe"><i class="fa-solid fa-arrow-down"></i></a></div>
 </div>
-    <footer>Made by © Dragonek<br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<div id="AboutMe">
+    <h1>O mnie</h1>
+    <p>Od lat kręci mnie technologia oraz sprzęt komputerowy. Na codzień zajmuje się testowaniem, naprawą oraz składaniem sprzętu komputerowego. W wolnym czasie zajmuje się również social mediami, na których wrzucam kontent typu "Tech"</p>
+</div>
+    <footer>Made by © Dragonek<br>2025<br>
     Using <a class="white" href="https://fontawesome.com">fontawesome.com</a></footer>
 </div>
 </body>
