--- a/index.html
+++ b/index.html
@@ -33,8 +33,36 @@
     <h1>O mnie</h1>
     <p>Od lat kręci mnie technologia oraz sprzęt komputerowy. Na codzień zajmuje się testowaniem, naprawą oraz składaniem sprzętu komputerowego. W wolnym czasie zajmuje się również social mediami, na których wrzucam kontent typu "Tech"</p>
 </div>
+<br>
+<br>
+<br>
+<div id="Setup">
+    <h1>Sprzęt, którego używam na codzień</h1>
+    <p id="nocenter">
+        - Myszka: Endorfy Gem Plus Wireless & Bloody A70<br>
+- Klawiatura: Endorfy Omnis Brown<br>
+- Podkładka: z temu, ciul wie jak sie nazywa oryginał<br>
+- Kamerka: IMILAB CMSXJ22A<br>
+- Słuchawki: Endorfy Viro Plus USB<br>
+- Głośnik: JBL Charge 5<br>
+- Monitor: Samsung Odyssey G3 LS27AG300NRXEN 144Hz 1ms 27"<br>
+- Monitor #2: LG FLATRON W2243S<br>
+</p>
+<h2>PC:</h2>
+<p id="nocenter">
+- Procesor: intel core i5-12600KF<br>
+- Płyta główna: Gigabyte Z690 UD DDR4<br>
+- RAM: Kingston Fury 32GB (4x8GB) 3200Mhz CL16 Beast RGB<br>
+- Chłodzenie: Endorfy Fera 5<br>
+- Karta Graficzna: MSi GeForce RTX 3060 Gaming X 12GB<br>
+- Dysk: Samsung SSD 500GB M.2 PCIe NVMe 980 + Samsung HDD 500GB<br>
+- Karta sieciowa: TP-LINK Archer T5E<br>
+- Zasilacz: Endorfy Supremo 750W GOLD<br>
+- Obudowa: Endorfy Signum 300 ARGB<br>
+</p>
+</div>
     <footer>Made by © Dragonek<br>2025<br>
-    Using <a class="white" href="https://fontawesome.com">fontawesome.com</a></footer>
+    Using HTML, CSS and <a class="white" href="https://fontawesome.com">fontawesome.com</a></footer>
 </div>
 </body>
 </html>
