--- a/index.html
+++ b/index.html
@@ -39,14 +39,20 @@
 <div id="Setup">
     <h1>Sprzęt, którego używam na codzień</h1>
     <p id="nocenter">
+        - Główny telefon: Xiaomi 13 8/256GB<br>
+        - Telefon zapasowy: iPhone XR 128GB<br>
+        - Tablet: Xiaomi Pad 6 6/128GB<br>
+        - Główny laptop: Lenovo ThinkPad T490s<br>
+        - Laptop poboczny: Dell Inspiron 3593<br>
         - Myszka: Endorfy Gem Plus Wireless & Bloody A70<br>
 - Klawiatura: Endorfy Omnis Brown<br>
-- Podkładka: z temu, ciul wie jak sie nazywa oryginał<br>
+- Podkładka: z temu (dokładnej nazwy nie znam ¯\_(ツ)_/¯ )<br>
 - Kamerka: IMILAB CMSXJ22A<br>
 - Słuchawki: Endorfy Viro Plus USB<br>
-- Głośnik: JBL Charge 5<br>
-- Monitor: Samsung Odyssey G3 LS27AG300NRXEN 144Hz 1ms 27"<br>
-- Monitor #2: LG FLATRON W2243S<br>
+- Głośnik: Edifier R1700BTs<br>
+- Głośnik dodatkowy: JBL Charge 5<br>
+- Monitor: Samsung Odyssey G3 LS27AG300NRXEN<br>
+- Monitor #2: AOC 27P1<br>
 </p>
 <h2>PC:</h2>
 <p id="nocenter">
@@ -55,8 +61,7 @@
 - RAM: Kingston Fury 32GB (4x8GB) 3200Mhz CL16 Beast RGB<br>
 - Chłodzenie: Endorfy Fera 5<br>
 - Karta Graficzna: MSi GeForce RTX 3060 Gaming X 12GB<br>
-- Dysk: Samsung SSD 500GB M.2 PCIe NVMe 980 + Samsung HDD 500GB<br>
-- Karta sieciowa: TP-LINK Archer T5E<br>
+- Dysk: Samsung SSD 500GB M.2 PCIe NVMe 980 + Samsung HDD 500GB + dyski poboczne<br>
 - Zasilacz: Endorfy Supremo 750W GOLD<br>
 - Obudowa: Endorfy Signum 300 ARGB<br>
 </p>
