--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     <h1>O mnie</h1>
     <p>Od lat kręci mnie technologia oraz sprzęt komputerowy. Na codzień zajmuje się testowaniem, naprawą oraz składaniem sprzętu komputerowego. W wolnym czasie zajmuje się również social mediami, na których wrzucam kontent typu "Tech"</p>
 </div>
-<br>
-<br>
-<br>
+<br><br><br>
 <div id="Setup">
     <h1>Sprzęt, którego używam na codzień</h1>
     <p id="nocenter">
@@ -67,6 +65,11 @@
 - Zasilacz: Endorfy Supremo 750W GOLD<br>
 - Obudowa: Endorfy Signum 300 ARGB<br>
 </p>
+</div>
+<br><br><br>
+<div id="Gallery">
+    <h1>Galeria</h1>
+    
 </div>
     <footer>Made by © Dragonek<br>2025<br>
     Using HTML, CSS and <a class="white" href="https://fontawesome.com">fontawesome.com</a></footer>
