--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <br><br><br>
 <div id="Gallery">
     <h1>Galeria</h1>
-    <img src="/gallery/img1.jpg" alt="gallery1" class="galleryimg">
+    <img src="gallery/img1.jpg" alt="gallery1" class="galleryimg">
     <img src="/gallery/img2.jpg" alt="gallery2" class="galleryimg">
     <img src="/gallery/img3.jpg" alt="gallery3" class="galleryimg">
     <img src="/gallery/img4.jpg" alt="gallery4" class="galleryimg">
