--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
 <br><br><br>
 <div id="Gallery">
     <h1>Galeria</h1>
-    <img src="gallery/img1.jpg" alt="gallery1" class="galleryimg">
-    <img src="/gallery/img2.jpg" alt="gallery2" class="galleryimg">
-    <img src="/gallery/img3.jpg" alt="gallery3" class="galleryimg">
-    <img src="/gallery/img4.jpg" alt="gallery4" class="galleryimg">
-    <img src="/gallery/img5.jpg" alt="gallery5" class="galleryimg">
-    <img src="/gallery/img6.jpg" alt="gallery6" class="galleryimg">
-    <img src="/gallery/img7.jpg" alt="gallery7" class="galleryimg">
-    <img src="/gallery/img8.jpg" alt="gallery8" class="galleryimg">
-    <img src="/gallery/img9.jpg" alt="gallery9" class="galleryimg">
-    <img src="/gallery/img10.jpg" alt="gallery10" class="galleryimg">
-    <img src="/gallery/img11.jpg" alt="gallery11" class="galleryimg">
-    <img src="/gallery/img12.jpg" alt="gallery12" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img1.jpg" alt="gallery1" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img2.jpg" alt="gallery2" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img3.jpg" alt="gallery3" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img4.jpg" alt="gallery4" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img5.jpg" alt="gallery5" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img6.jpg" alt="gallery6" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img7.jpg" alt="gallery7" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img8.jpg" alt="gallery8" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img9.jpg" alt="gallery9" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img10.jpg" alt="gallery10" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img11.jpg" alt="gallery11" class="galleryimg">
+    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img12.jpg" alt="gallery12" class="galleryimg">
     <br><br>
 </div>
     <footer>Made by © Dragonek<br>2025<br>
