--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <br><br><br>
 <div id="Gallery">
     <h1>Galeria</h1>
-    <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img1.jpg" alt="gallery1" class="galleryimg">
+    <img src="./gallery/img1.jpg" alt="gallery1" class="galleryimg">
     <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img2.jpg" alt="gallery2" class="galleryimg">
     <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img3.jpg" alt="gallery3" class="galleryimg">
     <img src="https://github.com/reald4gnk/BioWebsite/blob/main/gallery/img4.jpg" alt="gallery4" class="galleryimg">
