added spotify and soundcloud

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <div id="link"><a class ="alink" href="https://www.youtube.com/@d4gnk"><i class="fa-brands fa-youtube fa-xl"></i></a></div>
         <div id="link"><a class ="alink" href="https://github.com/reald4gnk"><i class="fa-brands fa-github fa-xl"></i></a></div>
         <div id="link"><a class ="alink" href="https://discord.gg/XWSXbzSYCq"><i class="fa-brands fa-discord fa-xl"></i></a></div>
+        <div id="link"><a class = "alink" href="https://soundcloud.com/d4gnk"><i class="fa-brands fa-soundcloud fa-xl"></i></a></div>
+        <div id="link"><a class = "alink" href="https://open.spotify.com/user/vhn46685wedwu8mhfprgn8czu"><i class="fa-brands fa-spotify fa-xl"></i></a></div>
     </div>
 <br>
 <br>
