links fix (now opening in new tab)

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         just practicing HTML & CSS ¯\_(ツ)_/¯<br>
         </p>
         <br>
-        <div id="link"><a class ="alink " href="https://www.tiktok.com/@d4gnk"><i class="fa-brands fa-tiktok fa-xl"></i></a></div>
-        <div id="link"><a class ="alink" href="https://www.instagram.com/d4gnk.real/"><i class="fa-brands fa-instagram fa-xl"></i></a></div>
-        <div id="link"><a class ="alink" href="https://www.youtube.com/@d4gnk"><i class="fa-brands fa-youtube fa-xl"></i></a></div>
-        <div id="link"><a class ="alink" href="https://github.com/reald4gnk"><i class="fa-brands fa-github fa-xl"></i></a></div>
-        <div id="link"><a class ="alink" href="https://discord.gg/XWSXbzSYCq"><i class="fa-brands fa-discord fa-xl"></i></a></div>
-        <div id="link"><a class = "alink" href="https://soundcloud.com/d4gnk"><i class="fa-brands fa-soundcloud fa-xl"></i></a></div>
-        <div id="link"><a class = "alink" href="https://open.spotify.com/user/vhn46685wedwu8mhfprgn8czu"><i class="fa-brands fa-spotify fa-xl"></i></a></div>
+        <div id="link"><a class ="alink" href="https://www.tiktok.com/@d4gnk" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a></div>
+        <div id="link"><a class ="alink" href="https://www.instagram.com/d4gnk.real/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a></div>
+        <div id="link"><a class ="alink" href="https://www.youtube.com/@d4gnk" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a></div>
+        <div id="link"><a class ="alink" href="https://github.com/reald4gnk" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a></div>
+        <div id="link"><a class ="alink" href="https://discord.gg/XWSXbzSYCq" target="_blank"><i class="fa-brands fa-discord fa-xl"></i></a></div>
+        <div id="link"><a class = "alink" href="https://soundcloud.com/d4gnk" target="_blank"><i class="fa-brands fa-soundcloud fa-xl"></i></a></div>
+        <div id="link"><a class = "alink" href="https://open.spotify.com/user/vhn46685wedwu8mhfprgn8czu" target="_blank"><i class="fa-brands fa-spotify fa-xl"></i></a></div>
     </div>
 <br>
 <br>
