--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <p>Od lat kręci mnie technologia oraz sprzęt komputerowy. Na codzień zajmuje się testowaniem, naprawą oraz składaniem sprzętu komputerowego. W wolnym czasie zajmuje się również social mediami, na których wrzucam kontent typu "Tech"</p>
 </div>
 <br><br><br>
+<div id="TodaysTrack">
+    <h1>Nutka na dzisiaj 🎵</h1>
+    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0weLkq5uJR7WncCADohLc2?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <br><br><br>
+</div>
 <div id="Setup">
     <h1>Sprzęt, którego używam na codzień</h1>
     <p id="nocenter">
